wallet btn styles and remove build.css

--- a/apps/market/styles/globals.css
+++ b/apps/market/styles/globals.css
@@ -6,15 +6,18 @@
 
 .wallet-adapter-button {
     background-color: transparent;
-    border: none;
+	border: #1A1A23;
+	border-radius: 9999px;
+	border-width: 2px;
+	border-style: solid;
     color: #fff;
     cursor: pointer;
     display: flex;
     align-items: center;
     font-family: 'DM Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
-    font-weight: 600;
-    height: 48px;
+    font-weight: 700;
+    height: 36px;
     padding: 0 24px;
 }
 
