--- a/apps/market/styles/globals.css
+++ b/apps/market/styles/globals.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-color: #1A1A23;
+    background-color: #101010;
 }
 
 .wallet-adapter-button {
@@ -86,13 +86,13 @@ body {
     right: 0;
     margin: 0;
     list-style: none;
-    background: #2c2d30;
     border-radius: 10px;
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.6);
     opacity: 0;
     visibility: hidden;
     transition: opacity 200ms ease, transform 200ms ease, visibility 200ms;
     font-family: 'DM Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    @apply bg-gradient-to-tr from-[#181424] via-buttontransparent2 to-buttontransparent border-t-[0.5px] border-[#474747];
 }
 
 .wallet-adapter-dropdown-list-active {
@@ -121,7 +121,7 @@ body {
 }
 
 .wallet-adapter-dropdown-list-item:not([disabled]):hover {
-    background-color: #1a1f2e;
+    background-color: #00000066;
 }
 
 .wallet-adapter-modal-collapse-button svg {
