--- a/apps/market/styles/globals.css
+++ b/apps/market/styles/globals.css
@@ -14,6 +14,16 @@
     }
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 
 body {
     background-color: #101010;
