--- a/apps/market/styles/globals.css
+++ b/apps/market/styles/globals.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
 @layer components{
-    .card-service-bg{
+    .card-commission-bg{
         @apply bg-gradient-to-tr from-[#161221] via-[#110E1A] to-[#180B2E]
     }
 
