--- a/apps/market/styles/globals.css
+++ b/apps/market/styles/globals.css
@@ -321,3 +321,14 @@ body {
     border-radius: 8px;
     color: #fff;
 }
+
+.grey_button{
+    border-radius: 8px;
+    border-style: solid;
+    border-width: 1.3px;
+    border-image-source: linear-gradient(to bottom, #2f2f2f 0%, rgba(38, 38, 38, 0));
+    border-image-slice: 1;
+    background-image: linear-gradient(208deg, #181424 96%, rgba(45, 42, 53, 0.94) 57%, rgba(24, 20, 36, 0.76) -17%), linear-gradient(to bottom, #2f2f2f 0%, rgba(38, 38, 38, 0));
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+}
