--- a/apps/market/styles/globals.css
+++ b/apps/market/styles/globals.css
@@ -379,5 +379,8 @@ body {
     background-image: linear-gradient(to bottom, #14131B, #14131B), radial-gradient(circle at 64% 50%, #243E70 77%, #313131 83%);
     background-origin: border-box;
     background-clip: content-box, border-box;
+}
 
+.defaultModalCard {
+    background-image: linear-gradient(to bottom, rgba(38, 35, 44, 0.61), rgba(50, 37, 78, 0.47));
 }
