--- a/apps/market/styles/globals.css
+++ b/apps/market/styles/globals.css
@@ -384,3 +384,7 @@ body {
 .defaultModalCard {
     background-image: linear-gradient(to bottom, rgba(38, 35, 44, 0.61), rgba(50, 37, 78, 0.47));
 }
+
+.home-button-bg {
+    background-image: linear-gradient(to bottom, rgba(34, 33, 40, 0.74), rgba(34, 33, 40, 0.74)), linear-gradient(to bottom, #313131 0%, rgba(49, 49, 49, 0) 100%);
+}
